--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Tu receta aquí</h1>
     <div class="recetas">
       <div class="receta">
-        <img src="bussine/img/pasta.jpeg" alt="Receta 1" class="img">
+        <img src="business/img/pasta.jpeg" alt="Receta 1" class="img">
         <h3>Receta</h3>
         <a id="receta" class="ver-receta">Desliza hacía abajo para ver la receta</a>
       </div>
